# rust-tutorial

./: .gitignore  README.md
common-collections/: Cargo.toml
common-collections/src/: dispatch.rs  exercises.rs  main.rs  vectors.rs
common-collections/src/exercises/: employee_management.rs  employee_store.rs  int_list_stats.rs  mod.rs  pig_latin.rs
common-collections/src/exercises/employee_management/: command.rs  command_dispatcher.rs  command_executor.rs  employee_store.rs  text_command_dispatcher.rs  text_command_executor.rs  text_command_processor.rs
common-collections/src/exercises/employee_management/command/: add_employee.rs  delete_employee.rs  dispatcher.rs  employee.rs  handler.rs  list_departments.rs  retrieve_all.rs  retrieve_by_department.rs
common-collections/src/exercises/employee_management/command/employee/: add_employee.rs  delete_employee.rs
common-collections/src/exercises/employee_management/command/handler/: add_employee.rs  delete_employee.rs  list_departments.rs  retrieve_all_employees.rs  retrieve_employees_by_department.rs
common-collections/src/exercises/employee_management/command_executor/: add_employee.rs  retrieve_all.rs  retrieve_by_department.rs  retrieve_department.rs
common-collections/src/exercises/employee_management/text_command_executor/: add_employee.rs  retrieve_all.rs  retrieve_department.rs
common-collections/src/strings/: mod.rs
common-collections/src/vectors/: create.rs  demo.rs  implementation.rs  modify.rs  retrieve.rs  spreadsheet.rs
common-collections/src/vectors/spreadsheet/: mod.rs  model.rs
(+57 files in other folders)
