[package]
name = "common-collections"
version = "0.1.0"
authors = ["Alex Garland <agarland@hotels.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
# Test dependencies
mockall = "0.7.1"
mockall_derive = "0.7.1"
# Specify version to force removal of version within dependency tree for mockall
regex = "1.5.6"
